--- a/Micro/Micro.Services.AuthAPI/appsettings.json
+++ b/Micro/Micro.Services.AuthAPI/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=Micro_AuthDB;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  },
+  "ApiSettings": {
+    "JwtOptions": {
+      "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
+      "Issuer": "micro-auth-api",
+      "Audience": "micro-client"
+    }
   }
 }
