--- a/Micro/Micro.Web/appsettings.json
+++ b/Micro/Micro.Web/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ServiceUrls": {
-    "CouponAPI": "https://localhost:6001"
+    "CouponAPI": "https://localhost:6001",
+    "AuthAPI": "https://localhost:6002"
   }
 }
